--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -16,7 +16,7 @@
                     <li class="nav-item <%= pageName==="about" && "active"%>"><a class="nav-link" href="/about">About Us</a></li>
                     <li class="nav-item <%= pageName==="courses" && "active"%>"><a class="nav-link" href="/courses">Courses</a></li>
                     <% if(userIN) { %>
-                    <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
+                    <li class="nav-item <%= pageName==="dashboard" && "active"%>"><a class="nav-link" href="/users/dashboard">Dashboard</a></li>
                     <% } %>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
@@ -27,7 +27,7 @@
                     <li><a class="hover-btn-new log orange" <%= pageName==="register" && "orange"%> href="/register"><span><i class="fa fa-user-plus" aria-hidden="true"></i></span></a></li>
                 </ul>
                 <% } else { %>
-                    <li><a class="hover-btn-new log orange mr-2 <%= pageName==="login" && "orange"%> " href="/users/logout"><span><i class="fa fa-sign-out" aria-hidden="true"></i></span></a></li>   
+                    <li><a class="hover-btn-new log orange mr-2 " href="/users/logout"><span><i class="fa fa-sign-out" aria-hidden="true"></i></span></a></li>   
                 <% } %>
             </div>
         </div>
