--- a/views/course-single.ejs
+++ b/views/course-single.ejs
@@ -17,8 +17,10 @@
 						</div>
 						<div class="post-content">
 							<div class="post-date">
-								<span class="day">30</span>
-								<span class="month">Nov</span>
+								<form action="/courses/enroll" method="POST">
+									<input type="hidden" name="course_id" value="<%= course._id %>">
+									<button class="btn btn-lg btn-warning text-white"><span>ENROLL</span></button>
+								</form>
 							</div>
 							<div class="meta-info-blog">
 								<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
@@ -38,7 +40,7 @@
 					
 					<div class="blog-author">
 						<div class="author-bio">
-							<h3 class="author_name"><%= course.user.name %></a></h3>
+							<h3 class="author_name"><%= course.name %></a></h3>
 						</div>
 					</div>
 					
