--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -29,12 +29,17 @@
                             <div class="image-blog">
                                 <img src="/images/blog_1.jpg" alt="" class="img-fluid">
                             </div>
+                            	
                             <div class="course-br">
                                 <div class="course-title">
                                     <h2><a href="/courses/<%= course.slug %>" title=""><%= course.name %></a></h2>
                                 </div>
                                 <div class="course-desc">
                                     <p><%= course.description %></p>
+                                    <form action="/courses/release" method="POST">
+                                        <input type="hidden" name="course_id" value="<%= course._id %>">
+                                        <button class="btn btn-lg btn-danger text-white"><span>RELEASE</span></button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
