validation and course delete created

--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -11,9 +11,26 @@
 	
     <div id="overviews" class="section wb">
     <div class="container">
+       
+         
         <div class="row">
-            <div class="col-lg-9 blog-post-single">
+            
+            <div class="col-lg-9 blog-post-single"> 
+                
                 <div class="row">
+                    <div class="col-lg-122 col-md-12 col-12">
+                        <% if(flashMessages) { %>
+                            <% if(flashMessages.success) { %>
+                                <div class="alert alert-success">
+                                    <%= flashMessages.success  %>
+                                </div>
+                            <% } else if (flashMessages.error) { %>
+                                <div class="alert alert-danger">
+                                    <%= flashMessages.error  %>
+                                </div>
+                            <% } %>      
+                        <% } %> 
+                    </div>
 					<% for( let course of courses){%>
                     <div class="col-lg-6 col-md-6 col-12">
                         <div class="course-item mb-5">
