--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -35,7 +35,7 @@
                                     <h2><a href="/courses/<%= course.slug %>" title=""><%= course.name %></a></h2>
                                 </div>
                                 <div class="course-desc">
-                                    <p><%= course.description %></p>
+                                    <p><%= `${course.description.substring(0,100)}...` %></p>
                                     <form action="/courses/release" method="POST">
                                         <input type="hidden" name="course_id" value="<%= course._id %>">
                                         <button class="btn btn-lg btn-danger text-white"><span>RELEASE</span></button>
@@ -76,6 +76,19 @@
                     </div><!-- end col -->
                 </div><!-- end row -->
                 <div class="row mt-5">
+                    <div class="col-lg-12 col-md-12 col-12">
+                        <% if(flashMessages) { %>
+                            <% if(flashMessages.success) { %>
+                                <div class="alert alert-success">
+                                    <%= flashMessages.success  %>
+                                </div>
+                            <% } else if (flashMessages.error) { %>
+                                <div class="alert alert-danger">
+                                    <%= flashMessages.error  %>
+                                </div>
+                            <% } %>      
+                        <% } %> 
+                    </div>
                     <% for(course of courses) {%>
                     <div class="col-lg-6 col-md-6 col-12">
                         <div class="course-item mb-5">
@@ -87,13 +100,19 @@
                                     <h2><a href="/courses/<%=course.slug %>" title=""><%= course.name %></a></h2>
                                 </div>
                                 <div class="course-desc">
-                                    <p><%= course.description %>... </p>
+                                    <p><%= `${course.description.substring(0,100)}...` %></p>
+                                </div>
+                                <div class="clearfix">
+                                    <ul style="list-style-type: none;">
+                                        <li><a href="/courses/<%= course.slug %>?_method=PUT" style="float:left;" class="btn btn-primary rounded-0 text-white"><span>UPDATE</span></a></li>
+                                        <li><a href="/courses/<%= course.slug %>?_method=DELETE" style="float:right;" onclick="return confirm('ARE YOU SURE')" class="btn btn-danger rounded-0 text-white"><span>DELETE</span></a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </div><!-- end col -->
                     <% } %>
-                 </div><!-- end row -->
+                </div><!-- end row -->
             </div><!-- end container -->
         </div><!-- end section -->
 
