--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,21 +12,34 @@
                     <div id="message"></div>
                     <form method="post" action="/users/signup">
                         <div class="row row-fluid">
-                            <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
-                                <input type="text" name="name" id="name" class="form-control" placeholder="Name">
+                            <div class="offset-1 col-lg-10 col-md-10 col-sm-10 required">
+                                <% if(flashMessages) { %>
+                                    <% if(flashMessages.success) { %>
+                                        <div class="alert alert-success">
+                                            <%= flashMessages.success  %>
+                                        </div>
+                                    <% } else if (flashMessages.error) { %>
+                                        <div class="alert alert-danger">
+                                            <%= flashMessages.error  %>
+                                        </div>
+                                    <% } %>      
+                                <% } %>
+                            </div>
+                            <div class="offset-1 col-lg-10 col-md-10 col-sm-10 required">
+                                <input type="text" name="name" id="name" class="form-control" placeholder="Name" >
+                            </div>
+                            <div class="offset-1 col-lg-10 col-md-10 col-sm-10 required">
+                                <input type="email" name="email" id="email" class="form-control" placeholder="Email" >
                             </div>
                             <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
-                                <input type="email" name="email" id="email" class="form-control" placeholder="Email">
-                            </div>
-                            <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
-                                <select class="form-control" name="role" id="">
+                                <select class="form-control" name="role" id="" >
                                     <option value="select">-Select-</option>
                                     <option value="student">Student</option>
                                     <option value="teacher">Teacher</option>
                                 </select>
                             </div>
                             <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
-                                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+                                <input type="password" name="password" id="password" class="form-control" placeholder="Password" >
                             </div>
                             <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                 <button type="submit" value="LOGIN" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">REGISTER</button>
