--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -18,7 +18,7 @@
             <div class="col-lg-9 blog-post-single"> 
                 
                 <div class="row">
-                    <div class="col-lg-122 col-md-12 col-12">
+                    <div class="col-lg-12 col-md-12 col-12">
                         <% if(flashMessages) { %>
                             <% if(flashMessages.success) { %>
                                 <div class="alert alert-success">
@@ -71,6 +71,7 @@
                 <div class="widget-categories">
                     <h3 class="widget-title">Categories</h3>
                     <ul>
+                        <li><a href="/courses">All Categories</a></li><br>
                         <% for(let category of categories){ %>
                         <li><a href="/courses?category=<%= category.slug %>"><%= category.name  %></a></li>
                         <% } %>
