--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,8 +57,9 @@
                     <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
                 </div>
             </div><!-- end title -->
-        
+           
             <div class="row align-items-center">
+				<% if (course[0]) { %>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
                         <h2><%= course[0].name %></h2>
@@ -66,7 +67,7 @@
                         <a href="/courses/<%= course[0].slug %>" class="hover-btn-new orange"><span>Learn More</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
-				
+				<% } %>
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="post-media wow fadeIn">
                         <img src="images/about_02.jpg" alt="" class="img-fluid img-rounded">
